# encore-juce

./: .gitignore  CLAUDE.md  CMakeLists.txt  EncoreJUCE.jucer
Resources/Languages/: _template.txt  en_US.txt  es_ES.txt  fr_FR.txt
Source/: Main.cpp
Source/Audio/: AudioEngine.cpp  AudioEngine.cpp.backup  AudioEngine.h  PitchShifter.cpp  PitchShifter.h
Source/Auth/: LoginFlowController.cpp  LoginFlowController.h
Source/CDG/: CDGDecoder.cpp  CDGDecoder.h
Source/Firebase/: FirebaseConfig.h  FirebaseManager.cpp  FirebaseManager.h
Source/Localization/: LocalizationManager.cpp  LocalizationManager.h
Source/Models/: AccessRights.h  Ad.cpp  Ad.h  Audit.cpp  Audit.h  CdgGroup.cpp  CdgGroup.h  CdgSong.cpp  CdgSong.h  Emoji.h  Host.cpp  Host.h  License.cpp  License.h  ListItem.h  Location.cpp  Location.h  Lyric.cpp  Lyric.h  Member.cpp  Member.h  Playing.cpp  Playing.h  Playlist.cpp  Playlist.h  Preset.cpp  Preset.h  QueueItem.cpp  QueueItem.h  Singers.cpp  Singers.h  Track.cpp  Track.h  User.cpp  User.h  UserVenueAssociation.h  VenueItem.cpp  VenueItem.h  VenueUser.cpp  VenueUser.h
Source/Services/: ApiService.cpp  ApiService.h  ArchiveService.cpp  ArchiveService.h  FirestoreClient.cpp  FirestoreClient.h  HostService.h  ImageCache.cpp  ImageCache.h  LibraryScanner.cpp  LibraryScanner.h  QueueService.cpp  QueueService.h  RequestService.cpp  RequestService.h  SongDatabase.cpp  SongDatabase.h  UserPreferences.cpp  UserPreferences.h  VenueService.cpp  VenueService.h  WaveformGenerator.cpp  WaveformGenerator.h
Source/UI/: AddSongsDialog.cpp  AddSongsDialog.h  BottomBar.cpp  BottomBar.h  EditSingerModal.cpp  EditSingerModal.h  HomePage.cpp  HomePage.h  LibraryPage.cpp  LibraryPage.h  LoginWindow.cpp  LoginWindow.h  LyricDisplayComponent.cpp  LyricDisplayComponent.h  LyricDisplayWindow.cpp  LyricDisplayWindow.h  MainArea.cpp  MainArea.h  MainComponent.cpp  MainComponent.h  MainComponent_Original.cpp  MainComponent_Simple.cpp  MixerPage.cpp  MixerPage.h  NavBar.cpp  NavBar.h  QueueBar.cpp  QueueBar.h  ResponsiveLayout.cpp  ResponsiveLayout.h  SearchPage.cpp  SearchPage.h  SettingsPage.cpp  SettingsPage.h  SongEditDialog.cpp  SongEditDialog.h  SongSelectionDialog.cpp  SongSelectionDialog.h  TopBar.cpp  TopBar.h
assets/images/: Encore-Icon.icns
firebase/: SPRINT1_METADATA_BACKEND.md  firestore.indexes.json  firestore.rules
firebase/functions/: index.js  package-lock.json  package.json
firebase/functions/scripts/: importMetadataJson.js
src/assets/: README.md
